exemplo/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`k8s.unicoob.local`)
    middlewares:
      - name: app-ratelimit
    services:
    - name: nginx-service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingressroute-tls
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`k8s.unicoob.local`)
    middlewares:
      - name: app-ratelimit
    services:
    - name: nginx-service
      port: 80
  tls:
    secretName: k8sunicoob-secret
